--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,35 @@
 annotated-types==0.7.0
 asgiref==3.8.1
 cffi==1.17.1
+contourpy==1.3.0
 cryptography==41.0.4
+cycler==0.12.1
 Django==4.2.16
 django-admin-soft-dashboard==1.0.12
 django-bootstrap-datepicker-plus==5.0.5
 django-phonenumber-field==8.0.0
 django-phonenumbers==1.0.1
+fonttools==4.54.1
+importlib_resources==6.4.5
+kiwisolver==1.4.7
+matplotlib==3.9.2
+numpy==2.0.2
+packaging==24.1
+pandas==2.2.3
 phonenumbers==8.13.45
+pillow==10.4.0
+plotly==5.24.1
 pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 rules==3.5
 six==1.16.0
 sqlparse==0.5.1
+tenacity==9.0.0
 typing_extensions==4.12.2
+tzdata==2024.2
+zipp==3.20.2
